# nexus-os

./: .env.example  .gitignore  Dockerfile  Dockerfile.lite  README.md  docker-compose.yml  pyproject.toml  run.py
docker/: startup-lite.sh  startup.sh
nexus/: __main__.py  brain.py  bridge.py  config.py  core.py  executor.py
